# octo-track

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  renovate.json
.claude/: todo.md
.github/workflows/: ci.yml  release.yml
octo_track/: __main__.py  octopus.py
octo_track/dashboard/: app.py  cache.py  data.py  shared.py
octo_track/dashboard/pages/: agile_rates.py  daily_overview.py  halfhourly.py
octo_track/models/: __init__.py  consumption.py
test/: test_octopus.py
test/data/: __init__.py  account.json  consumption_page_1.json  consumption_page_2.json  graphql_accounts.json  graphql_token.json  octopus_consumption.py  standing_charges_page_1.json  standing_charges_page_2.json  unit_rates_page_1.json  unit_rates_page_2.json
