[project]
name = "octo-track"
version = "0.1.0"
description = "Electricity usage dashboard for Octopus Energy customers"
readme = "README.md"
requires-python = ">=3.14,<3.15"

dependencies = [
    "click==8.3.3",
    "requests==2.33.1",
    "streamlit==1.56.0",
    "pandas==3.0.2",
    "plotly==6.7.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "requests-mock==1.12.1",
    "ruff==0.15.2"
]

[project.scripts]
octo-track = "octo_track.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 180
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C90",    # mccabe
]

[tool.ruff.lint.per-file-ignores]
"octo_track/dashboard/**" = ["C901"]
